Add Serilog logging configuration across multiple services, including structured logging and enrichment with OpenTelemetry trace information. Introduce TenantId value object for multi-tenancy support in Alarm, Device, Patient, and Prescription domains. Update Docker Compose and appsettings for Serilog integration, and remove obsolete settings. Enhance logging capabilities for better observability and maintainability.

--- a/Gateway/Dialysis.Gateway/appsettings.Production.json
+++ b/Gateway/Dialysis.Gateway/appsettings.Production.json
@@ -1,4 +1,23 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Yarp": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
