--- a/Services/Dialysis.Cds/Dialysis.Cds.Api/Dialysis.Cds.Api.csproj
+++ b/Services/Dialysis.Cds/Dialysis.Cds.Api/Dialysis.Cds.Api.csproj
@@ -13,6 +13,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Serilog.AspNetCore" />
+        <PackageReference Include="Serilog.Settings.Configuration" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     </ItemGroup>
