--- a/Services/Dialysis.Fhir/Dialysis.Fhir.Api/appsettings.json
+++ b/Services/Dialysis.Fhir/Dialysis.Fhir.Api/appsettings.json
@@ -1,16 +1,12 @@
 {
+  "Serilog": {
+    "MinimumLevel": { "Default": "Information", "Override": { "Microsoft": "Warning", "Microsoft.AspNetCore": "Warning" } },
+    "WriteTo": [{ "Name": "Console" }],
+    "Enrich": ["FromLogContext"]
+  },
   "Logging": { "LogLevel": { "Default": "Information", "Microsoft.AspNetCore": "Warning" } },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "FhirDb": "Host=localhost;Database=dialysis_fhir;Username=postgres;Password=postgres"
-  },
-  "Authentication": {
-    "JwtBearer": {
-      "Authority": "https://login.microsoftonline.com/common/v2.0",
-      "Audience": "api://dialysis-pdms",
-      "RequireHttpsMetadata": true,
-      "DevelopmentBypass": false
-    }
-  },
+  "ConnectionStrings": { "FhirDb": "Host=localhost;Database=dialysis_fhir;Username=postgres;Password=postgres" },
+  "Authentication": { "JwtBearer": { "Authority": "https://login.microsoftonline.com/common/v2.0", "Audience": "api://dialysis-pdms", "RequireHttpsMetadata": true, "DevelopmentBypass": false } },
   "FhirExport": { "BaseUrl": "http://localhost:5000" }
 }
