--- a/Services/Dialysis.Prescription/Dialysis.Prescription.Api/appsettings.json
+++ b/Services/Dialysis.Prescription/Dialysis.Prescription.Api/appsettings.json
@@ -1,26 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "MinimumLevel": { "Default": "Information", "Override": { "Microsoft": "Warning", "Microsoft.AspNetCore": "Warning" } },
+    "WriteTo": [{ "Name": "Console" }],
+    "Enrich": ["FromLogContext"]
   },
+  "Logging": { "LogLevel": { "Default": "Information", "Microsoft.AspNetCore": "Warning" } },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "PrescriptionDb": "Host=localhost;Database=dialysis_prescription;Username=postgres;Password=postgres"
-  },
-  "Authentication": {
-    "JwtBearer": {
-      "Authority": "https://login.microsoftonline.com/common/v2.0",
-      "Audience": "api://dialysis-pdms",
-      "RequireHttpsMetadata": true
-    }
-  },
-  "PrescriptionIngestion": {
-    "ConflictPolicy": "Reject"
-  },
-  "TimeSync": {
-    "MaxAllowedDriftSeconds": 300,
-    "LogDriftWarnings": true
-  }
+  "ConnectionStrings": { "PrescriptionDb": "Host=localhost;Database=dialysis_prescription;Username=postgres;Password=postgres" },
+  "Authentication": { "JwtBearer": { "Authority": "https://login.microsoftonline.com/common/v2.0", "Audience": "api://dialysis-pdms", "RequireHttpsMetadata": true } },
+  "PrescriptionIngestion": { "ConflictPolicy": "Reject" },
+  "TimeSync": { "MaxAllowedDriftSeconds": 300, "LogDriftWarnings": true }
 }
