--- a/BuildingBlocks/BuildingBlocks.csproj
+++ b/BuildingBlocks/BuildingBlocks.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <FrameworkReference Include="Microsoft.AspNetCore.App" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" />
+      <PackageReference Include="Serilog" />
     </ItemGroup>
 
 </Project>
