--- a/Gateway/Dialysis.Gateway/Dialysis.Gateway.csproj
+++ b/Gateway/Dialysis.Gateway/Dialysis.Gateway.csproj
@@ -16,6 +16,9 @@
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" />
+    <PackageReference Include="Serilog.AspNetCore" />
+    <PackageReference Include="Serilog.Formatting.Compact" />
+    <PackageReference Include="Serilog.Settings.Configuration" />
     <PackageReference Include="Yarp.ReverseProxy" />
   </ItemGroup>
 
