--- a/Gateway/Dialysis.Gateway/appsettings.json
+++ b/Gateway/Dialysis.Gateway/appsettings.json
@@ -1,4 +1,18 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Yarp": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" }
+    ],
+    "Enrich": [ "FromLogContext" ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
