--- a/Services/Dialysis.Patient/Dialysis.Patient.Api/Dialysis.Patient.Api.csproj
+++ b/Services/Dialysis.Patient/Dialysis.Patient.Api/Dialysis.Patient.Api.csproj
@@ -16,6 +16,8 @@
 
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.NpgSql" />
+        <PackageReference Include="Serilog.AspNetCore" />
+        <PackageReference Include="Serilog.Settings.Configuration" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
