--- a/Services/Dialysis.Patient/Dialysis.Patient.Api/appsettings.json
+++ b/Services/Dialysis.Patient/Dialysis.Patient.Api/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [{ "Name": "Console" }],
+    "Enrich": ["FromLogContext"]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
