--- a/Services/Dialysis.Reports/Dialysis.Reports.Api/Dialysis.Reports.Api.csproj
+++ b/Services/Dialysis.Reports/Dialysis.Reports.Api/Dialysis.Reports.Api.csproj
@@ -12,6 +12,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Serilog.AspNetCore" />
+        <PackageReference Include="Serilog.Settings.Configuration" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     </ItemGroup>
