Add Docker Compose configuration for multiple services and enhance health checks
- Introduced a new generated Docker Compose override file to streamline service deployment for alarm, CDS, device, FHIR, and gateway APIs.
- Updated health check methods in NtpSyncHealthCheck and Sender classes to improve async handling and maintainability.
- Added new migration files to synchronize the Prescription model with updated settings handling.
- Enhanced ReportsAggregationService with logging capabilities for better error tracking and response handling.
- Refactored various methods across services to utilize async/await patterns consistently, improving code readability and performance.

--- a/Gateway/Dialysis.Gateway/appsettings.json
+++ b/Gateway/Dialysis.Gateway/appsettings.json
@@ -109,6 +109,13 @@
           "Path": "/api/alarms/{**catch-all}"
         }
       },
+      "alarm-route-exact": {
+        "ClusterId": "alarm-cluster",
+        "Match": {
+          "Path": "/api/alarms"
+        },
+        "Order": 8
+      },
       "alarm-hl7": {
         "ClusterId": "alarm-cluster",
         "Match": {
