--- a/Services/Dialysis.Cds/Dialysis.Cds.Api/Dialysis.Cds.Api.csproj
+++ b/Services/Dialysis.Cds/Dialysis.Cds.Api/Dialysis.Cds.Api.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
         <PackageReference Include="Refit" />
         <PackageReference Include="Refit.HttpClientFactory" />
+        <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Serilog.AspNetCore" />
