--- a/Services/Dialysis.Fhir/Dialysis.Fhir.Api/Dialysis.Fhir.Api.csproj
+++ b/Services/Dialysis.Fhir/Dialysis.Fhir.Api/Dialysis.Fhir.Api.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <NoWarn>$(NoWarn);IDE0058</NoWarn>
+        <NoWarn>$(NoWarn);IDE0058;IDE0005</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
@@ -17,6 +17,7 @@
     <ItemGroup>
         <PackageReference Include="Refit" />
         <PackageReference Include="Refit.HttpClientFactory" />
+        <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.NpgSql" />
