--- a/Services/Dialysis.Reports/Dialysis.Reports.Api/Dialysis.Reports.Api.csproj
+++ b/Services/Dialysis.Reports/Dialysis.Reports.Api/Dialysis.Reports.Api.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Refit" />
     <PackageReference Include="Refit.HttpClientFactory" />
+    <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
   </ItemGroup>
 
 </Project>
