Add integration event handling and outbox pattern implementation
- Introduced IIntegrationEventBuffer for deferred integration events, ensuring they are published post-commit.
- Implemented IntegrationEventOutbox to persist integration events in the same transaction as business data, preventing loss on server restarts.
- Added IntegrationEventOutboxPublisher to handle background publishing of events from the outbox.
- Updated various domain event handlers to utilize the new integration event structures, enhancing system reliability and responsiveness.
- Created new integration events for threshold breaches and alarm escalations, with corresponding consumers for processing.
- Enhanced Alarm and Treatment services to support the new event-driven architecture, improving overall event handling and consistency.

--- a/Services/Dialysis.Alarm/Dialysis.Alarm.Infrastructure/Dialysis.Alarm.Infrastructure.csproj
+++ b/Services/Dialysis.Alarm/Dialysis.Alarm.Infrastructure/Dialysis.Alarm.Infrastructure.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.csproj" />
         <ProjectReference Include="..\Dialysis.Alarm.Application\Dialysis.Alarm.Application.csproj" />
     </ItemGroup>
 
