Add health checks and integration event inbox for alarm and treatment services
- Implemented health checks for all API services in the Docker Compose configuration to ensure service availability and reliability.
- Introduced an integration event inbox to handle idempotent consumption of integration events, preventing duplicate processing.
- Enhanced the Alarm API with a new endpoint to record alarms from threshold breaches, facilitating cross-context communication with the Treatment service.
- Updated the Treatment service to utilize the Alarm API for creating alarms based on detected threshold breaches, improving event-driven architecture.
- Added necessary configurations and migrations for the integration event inbox in both Alarm and Treatment services, ensuring proper database setup.

--- a/Services/Dialysis.Treatment/Dialysis.Treatment.Api/appsettings.json
+++ b/Services/Dialysis.Treatment/Dialysis.Treatment.Api/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": { "TreatmentDb": "Host=localhost;Database=dialysis_treatment;Username=postgres;Password=postgres" },
   "Authentication": { "JwtBearer": { "Authority": "https://login.microsoftonline.com/common/v2.0", "Audience": "api://dialysis-pdms", "RequireHttpsMetadata": true } },
-  "TimeSync": { "MaxAllowedDriftSeconds": 300, "LogDriftWarnings": true }
+  "TimeSync": { "MaxAllowedDriftSeconds": 300, "LogDriftWarnings": true },
+  "AlarmApi": { "BaseUrl": "http://localhost:5053" }
 }
