Enhance Docker Compose and service configurations for Redis and Transponder integration
- Added Redis service to Docker Compose for caching and improved performance.
- Updated connection strings in the Alarm and Treatment services to include Redis.
- Removed the integration event inbox implementation, transitioning to Transponder's built-in idempotent consumption using InboxStates.
- Enhanced health checks to monitor Redis alongside existing database checks.
- Updated documentation to reflect changes in connection strings and service dependencies.

--- a/Services/Dialysis.Treatment/Dialysis.Treatment.Api/Dialysis.Treatment.Api.csproj
+++ b/Services/Dialysis.Treatment/Dialysis.Treatment.Api/Dialysis.Treatment.Api.csproj
@@ -13,6 +13,8 @@
         <ProjectReference Include="..\Dialysis.Treatment.Infrastructure\Dialysis.Treatment.Infrastructure.csproj" />
         <ProjectReference Include="..\..\..\Intercessor\Intercessor.csproj" />
         <ProjectReference Include="..\..\..\Transponder\Transponder.csproj" />
+        <ProjectReference Include="..\..\..\Transponder.Persistence.EntityFramework.PostgreSql\Transponder.Persistence.EntityFramework.PostgreSql.csproj" />
+        <ProjectReference Include="..\..\..\Transponder.Transports.AzureServiceBus\Transponder.Transports.AzureServiceBus.csproj" />
         <ProjectReference Include="..\..\..\Transponder.Transports.SignalR\Transponder.Transports.SignalR.csproj" />
         <ProjectReference Include="..\..\..\Verifier\Verifier.csproj" />
     </ItemGroup>
