Add integration tests and exception handling improvements across services
- Introduced new integration tests for the Gateway service, ensuring health check endpoints return expected results.
- Added central exception handling for APIs to standardize error responses for validation and argument exceptions.
- Updated service configurations to utilize the new exception handling middleware, enhancing error management.
- Registered new project references for testing frameworks in Gateway and HL7 to FHIR services, improving test coverage.
- Implemented new integration events and handlers for processing threshold breaches in the Alarm service, enhancing event-driven architecture.

--- a/BuildingBlocks/BuildingBlocks.csproj
+++ b/BuildingBlocks/BuildingBlocks.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Intercessor\Intercessor.csproj" />
       <ProjectReference Include="..\Transponder\Transponder.csproj" />
+      <ProjectReference Include="..\Verifier\Verifier.csproj" />
     </ItemGroup>
 
     <ItemGroup>
