--- a/Services/Dialysis.Alarm/Dialysis.Alarm.Infrastructure/Dialysis.Alarm.Infrastructure.csproj
+++ b/Services/Dialysis.Alarm/Dialysis.Alarm.Infrastructure/Dialysis.Alarm.Infrastructure.csproj
@@ -10,6 +10,8 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.csproj" />
         <ProjectReference Include="..\Dialysis.Alarm.Application\Dialysis.Alarm.Application.csproj" />
+        <ProjectReference Include="..\..\..\Transponder\Transponder.csproj" />
+        <ProjectReference Include="..\..\..\Transponder.Persistence\Transponder.Persistence.csproj" />
     </ItemGroup>
 
     <ItemGroup>
