Update ASB emulator startup script and improve NTP sync health check logging
- Modified the ASB emulator startup script to include the `--build` flag for Docker Compose, ensuring images are rebuilt before starting.
- Enhanced the NTP sync health check to reduce log noise by avoiding exception attachment for specific cases, improving clarity in minimal container environments.
- Removed unused seeder interface and program files, streamlining the codebase and eliminating unnecessary complexity.

--- a/DataProducerSimulator/DataProducerSimulator.csproj
+++ b/DataProducerSimulator/DataProducerSimulator.csproj
@@ -5,13 +5,14 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>Dialysis.Seeder</RootNamespace>
+    <RootNamespace>Dialysis.DataProducerSimulator</RootNamespace>
     <NoWarn>$(NoWarn);S3776;S6966</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Bogus" />
     <PackageReference Include="Refit" />
+    <PackageReference Include="Refit.HttpClientFactory" />
   </ItemGroup>
 
 </Project>
