--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
         run: dotnet build --no-restore -c Release
 
       - name: Test
-        run: dotnet test --no-build -c Release --filter "FullyQualifiedName~Dialysis" --verbosity normal
+        run: dotnet test -c Release --filter "FullyQualifiedName~Dialysis" --verbosity normal
