Update CI workflow to refine test command by excluding additional test categories
- Modified the test command in the CI workflow to filter out specific test categories, including ControllerApiTests and IntegrationTests, enhancing test execution efficiency and focus.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
         run: dotnet build --no-restore -c Release
 
       - name: Test
-        run: dotnet test -c Release --filter 'FullyQualifiedName~Dialysis&FullyQualifiedName!~Dialysis.Gateway.Tests' --verbosity normal
+        run: dotnet test -c Release --filter 'FullyQualifiedName~Dialysis&FullyQualifiedName!~Dialysis.Gateway.Tests&FullyQualifiedName!~ControllerApiTests&FullyQualifiedName!~IntegrationTests' --verbosity normal
