Enhance caching strategy with Redis integration and update Docker configuration
- Added support for Read-Through and Write-Through caching patterns using Redis, improving data retrieval efficiency.
- Introduced new interfaces and implementations for cache invalidation and read-through caching.
- Updated Docker Compose configuration to include Redis service and connection strings for multiple APIs.
- Refactored existing services to utilize the new caching mechanisms, ensuring consistency and performance improvements.
- Enhanced health checks to monitor Redis availability across services.
- Documented caching strategies and updated related project files for clarity and maintainability.

--- a/Services/Dialysis.Alarm/Dialysis.Alarm.Api/Dialysis.Alarm.Api.csproj
+++ b/Services/Dialysis.Alarm/Dialysis.Alarm.Api/Dialysis.Alarm.Api.csproj
@@ -14,6 +14,7 @@
         <ProjectReference Include="..\..\..\Intercessor\Intercessor.csproj" />
         <ProjectReference Include="..\..\..\Transponder\Transponder.csproj" />
         <ProjectReference Include="..\..\..\Transponder.Persistence.EntityFramework.PostgreSql\Transponder.Persistence.EntityFramework.PostgreSql.csproj" />
+        <ProjectReference Include="..\..\..\Transponder.Persistence.Redis\Transponder.Persistence.Redis.csproj" />
         <ProjectReference Include="..\..\..\Transponder.Transports.AzureServiceBus\Transponder.Transports.AzureServiceBus.csproj" />
         <ProjectReference Include="..\..\..\Transponder.Transports.SignalR\Transponder.Transports.SignalR.csproj" />
         <ProjectReference Include="..\..\..\Verifier\Verifier.csproj" />
@@ -21,6 +22,7 @@
 
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.NpgSql" />
+        <PackageReference Include="AspNetCore.HealthChecks.Redis" />
         <PackageReference Include="Serilog.AspNetCore" />
         <PackageReference Include="Serilog.Settings.Configuration" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
