--- a/Services/Dialysis.Device/Dialysis.Device.Api/Dialysis.Device.Api.csproj
+++ b/Services/Dialysis.Device/Dialysis.Device.Api/Dialysis.Device.Api.csproj
@@ -12,11 +12,13 @@
         <ProjectReference Include="..\Dialysis.Device.Infrastructure\Dialysis.Device.Infrastructure.csproj" />
         <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.csproj" />
         <ProjectReference Include="..\..\..\Intercessor\Intercessor.csproj" />
+        <ProjectReference Include="..\..\..\Transponder.Persistence.Redis\Transponder.Persistence.Redis.csproj" />
         <ProjectReference Include="..\..\..\Verifier\Verifier.csproj" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.NpgSql" />
+        <PackageReference Include="AspNetCore.HealthChecks.Redis" />
         <PackageReference Include="Serilog.AspNetCore" />
         <PackageReference Include="Serilog.Settings.Configuration" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
