Enhance exception handling and update package references across services
- Added central exception handling configuration to multiple services, improving error reporting and management.
- Updated package references in various projects to include `Azure.Identity` and `MailKit`, ensuring compatibility with new features and services.
- Modified Docker Compose configuration for the Azure Service Bus emulator to support new environment variables and improve local development setup.
- Refactored exception handling logic in the `CentralExceptionHandlerExtensions` to streamline error responses and enhance maintainability.

--- a/Services/Dialysis.Patient/Dialysis.Patient.Api/appsettings.Production.json
+++ b/Services/Dialysis.Patient/Dialysis.Patient.Api/appsettings.Production.json
@@ -1,7 +1,15 @@
 {
-  "Authentication": {
-    "JwtBearer": {
-      "DevelopmentBypass": false
+  "Authentication": { "JwtBearer": { "DevelopmentBypass": false } },
+  "ExceptionHandling": {
+    "Email": {
+      "Enabled": true,
+      "DevelopmentEmail": "dev-errors@example.com",
+      "SmtpHost": "smtp.example.com",
+      "SmtpPort": 587,
+      "SmtpUser": "",
+      "SmtpPassword": "",
+      "FromAddress": "noreply@example.com",
+      "FromDisplayName": "Dialysis PDMS Error Reporter"
     }
   }
 }
