--- a/Transponder.Transports.AzureServiceBus/Transponder.Transports.AzureServiceBus.csproj
+++ b/Transponder.Transports.AzureServiceBus/Transponder.Transports.AzureServiceBus.csproj
@@ -16,7 +16,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Identity" />
       <PackageReference Include="Azure.Messaging.ServiceBus" />
+      <PackageReference Include="Azure.ResourceManager.ServiceBus" />
     </ItemGroup>
 
 </Project>
