--- a/docker/asb-emulator/.env.example
+++ b/docker/asb-emulator/.env.example
@@ -1,8 +1,18 @@
 # Copy to project root as .env when using Azure Service Bus Emulator
 # docker compose -f docker-compose.yml -f docker-compose.asb.yml up -d
+# See: https://learn.microsoft.com/en-us/azure/service-bus-messaging/test-locally-with-service-bus-emulator
 
-# Required: Accept EULA for Azure SQL Edge and Service Bus Emulator
+# Required: Accept EULA for SQL Server Linux and Service Bus Emulator
 ACCEPT_EULA=Y
 
-# Required: Strong password for SQL Edge (min 8 chars, meets policy)
+# Required: Strong password for SQL Server (min 8 chars, meets policy)
 MSSQL_SA_PASSWORD=YourStr0ng!Password
+
+# Path to Config.json (relative to project root; default works for standard layout)
+CONFIG_PATH=./docker/asb-emulator/Config.json
+
+# Port for emulator Management & Health-check APIs (default 5300)
+EMULATOR_HTTP_PORT=5300
+
+# Optional: Seconds to wait for SQL to be ready (default 15)
+# SQL_WAIT_INTERVAL=15
