--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -14,7 +14,9 @@
     <PackageVersion Include="Aspire.Hosting.Redis" Version="13.1.0" />
     <PackageVersion Include="AWSSDK.SimpleNotificationService" Version="4.0.2.11" />
     <PackageVersion Include="AWSSDK.SQS" Version="4.0.2.9" />
+    <PackageVersion Include="Azure.Identity" Version="1.17.1" />
     <PackageVersion Include="Azure.Messaging.ServiceBus" Version="7.20.1" />
+    <PackageVersion Include="Azure.ResourceManager.ServiceBus" Version="1.1.0" />
     <PackageVersion Include="Bogus" Version="35.6.5" />
     <PackageVersion Include="Confluent.Kafka" Version="2.12.0" />
     <PackageVersion Include="coverlet.collector" Version="6.0.2" />
@@ -27,6 +29,7 @@
     <PackageVersion Include="Hl7.Fhir.R4" Version="6.0.2" />
     <PackageVersion Include="Google.Protobuf" Version="3.28.0" />
     <PackageVersion Include="Humanizer" Version="3.0.1" />
+    <PackageVersion Include="MailKit" Version="4.9.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Authorization" Version="10.0.1" />
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.1" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.1" />
