Enhance exception handling and add API tests across services
- Updated `.editorconfig` to suppress specific IDE warnings for EF Core migrations.
- Added `BuildingBlocks.ExceptionHandling.Tests` project with comprehensive tests for the central exception handler and related components.
- Integrated exception handling configuration in multiple services, ensuring consistent error reporting.
- Updated `appsettings.Production.json` for various services to include exception handling email settings.
- Created new API tests for critical flows in the Alarm and Prescription services, improving test coverage and reliability.

--- a/.editorconfig
+++ b/.editorconfig
@@ -235,6 +235,8 @@ dotnet_naming_symbols.async_methods.applicable_accessibilities = public, interna
 [**/Migrations/*.cs]
 # EF Core migrations are auto-generated; relax strict rules.
 dotnet_diagnostic.IDE0005.severity = none
+dotnet_diagnostic.IDE0055.severity = none
+dotnet_diagnostic.IDE0058.severity = none
 
 [**/ExceptionHandling/*.cs]
 # Microsoft.AspNetCore.Http required for HttpContext, IHeaderDictionary; analyzer false positive
