--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
         run: dotnet build --no-restore -c Release
 
       - name: Test
-        run: dotnet test -c Release --filter 'FullyQualifiedName~Dialysis&FullyQualifiedName!~Dialysis.Gateway.Tests&FullyQualifiedName!~ControllerApiTests&FullyQualifiedName!~IntegrationTests' --verbosity normal
+        run: dotnet test -c Release --filter 'FullyQualifiedName~Dialysis&FullyQualifiedName!~ControllerApiTests&FullyQualifiedName!~IntegrationTests' --verbosity normal
