--- a/Services/Dialysis.Cds/Dialysis.Cds.Api/appsettings.Production.json
+++ b/Services/Dialysis.Cds/Dialysis.Cds.Api/appsettings.Production.json
@@ -3,5 +3,17 @@
     "JwtBearer": {
       "DevelopmentBypass": false
     }
+  },
+  "ExceptionHandling": {
+    "Email": {
+      "Enabled": true,
+      "DevelopmentEmail": "dev-errors@example.com",
+      "SmtpHost": "smtp.example.com",
+      "SmtpPort": 587,
+      "SmtpUser": "",
+      "SmtpPassword": "",
+      "FromAddress": "noreply@example.com",
+      "FromDisplayName": "Dialysis PDMS Error Reporter"
+    }
   }
 }
