Add horizontal scaling support with Redis backplane for SignalR</message>
<message>
- Introduced `Microsoft.AspNetCore.SignalR.StackExchangeRedis` package to Alarm and Treatment services for SignalR scaling.
- Updated `Program.cs` in both services to configure SignalR with Redis backplane when the connection string is set.
- Added `docker-compose.scale.yml` for horizontal scaling of multiple API instances.
- Documented horizontal scaling approach and prerequisites in `SYSTEM-ARCHITECTURE.md` and `PRODUCTION-CONFIG.md`.
- Created a horizontal scaling plan in `.cursor/plans/horizontal_scaling_plan.plan.md` outlining implementation steps and requirements.

--- a/Services/Dialysis.Alarm/Dialysis.Alarm.Api/Dialysis.Alarm.Api.csproj
+++ b/Services/Dialysis.Alarm/Dialysis.Alarm.Api/Dialysis.Alarm.Api.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="Azure.Identity" />
         <PackageReference Include="AspNetCore.HealthChecks.NpgSql" />
         <PackageReference Include="AspNetCore.HealthChecks.Redis" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.StackExchangeRedis" />
         <PackageReference Include="Serilog.AspNetCore" />
         <PackageReference Include="Serilog.Settings.Configuration" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
