--- a/clients/dialysis-dashboard/package.json
+++ b/clients/dialysis-dashboard/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
     "@tanstack/react-query": "^5.90.21",
+    "axios": "^1.13.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "^2.15.0"
